# gpt

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml
backend/: README.md  pyproject.toml
backend/app/: config.py  pyproject.toml  server.py
backend/app/migrations/models/: 0_20240608105211_init.py  0_20240620100120_init.py  0_20240718171830_init.py  1_20240609200919_update.py  1_20240625144704_update.py  1_20240722083219_update.py  2_20240609231959_update.py  2_20240716152640_update.py  2_20240724100648_update.py  3_20240716163038_update.py  3_20240724102325_update.py  4_20240716163130_update.py  4_20240724105709_update.py
backend/app/models/: models.py
backend/app/routers/: appset.py  appset_no_auth.py  chat.py  chat_history.py  chatset.py  dataset.py  retrieval.py  user.py
backend/app/utils/: authenticate.py  retrieval.py  templates.py
frontend/: frontend.md  index.html  package.json  pnpm-lock.yaml
frontend/src/: App.vue  main.js
frontend/src/api/: appset.js  blog.js  chat.js  chatset.js  dataset.js  user.js
frontend/src/components/: ChatComponent.vue  ChatSetBox.vue  DataBaseBox.vue  EditChunkModal.vue  IconTextButton.vue  LeftAside.vue  QAContainer.vue  RetrievalList.vue  RetrievalParameterModal.vue
frontend/src/router/: index.js
frontend/src/stores/: setting.js  token.js  user.js
frontend/src/utils/: request.js
frontend/src/views/: APPIDChat.vue  APPIDConfiguration.vue  APPIDPublish.vue  APPIDRouterView.vue  AccountView.vue  AppView.vue  ChatView.vue  DataBaseFolderView.vue  DataBaseView.vue  ForbiddenView.vue  (+8 more)
